--- a/404.md
+++ b/404.md
@@ -1,1 +1,8 @@
 Not found! Return to Home
+Check out these useful links:
+
+https://mayankvikash.ml/
+
+https://mayankvikash.ml/posts/
+
+https://mayankvikash.ml/news/
